# ida-x64dbg-mcp

./: .gitignore  LICENSE  README.md  commithash.txt  pyproject.toml
.github/workflows/: ci.yml
bridges/ida/: ix64mcp_ida.py
bridges/x64dbg/: CMakeLists.txt  ix64mcp_x64dbg.cpp
ix64mcp/: __init__.py  agent_ux.py  bridge.py  config.py  context_budget.py  daemon_api.py  harness.py  malware.py  patch.py  pe.py  policy.py  protocol.py  runtime.py  server.py  session.py  smoke_x64dbg.py  store.py  suggestions.py
samples/: CMakeLists.txt
samples/anti_debug_demo/: CMakeLists.txt  main.c
samples/control_flow_lab/: CMakeLists.txt  main.c
samples/crackme_simple/: CMakeLists.txt  main.c
scripts/: build-x64dbg-plugin.ps1  doctor.ps1  install-ida-plugin.ps1  install-x64dbg-plugin.ps1  install.ps1
tests/: test_alpha_hardening.py  test_bridge_events.py  test_daemon_api.py  test_installation_surface.py  test_runtime.py  test_server_tools.py  test_session.py  test_store.py
